Added more pages/ raising state / page changing

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -2,5 +2,8 @@
 @import 'reset.scss';
 @import 'variables.scss';
 @import 'general.scss';
+@import 'logo.scss';
 @import 'header.scss';
+@import 'menu.scss';
 @import 'content.scss';
+@import 'footer.scss';
