--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -6,4 +6,6 @@
 @import 'header.scss';
 @import 'menu.scss';
 @import 'content.scss';
+@import 'forms.scss';
 @import 'footer.scss';
+@import 'mediaQueries.scss';
