--- a/src/style/menu.scss
+++ b/src/style/menu.scss
@@ -1,5 +1,5 @@
 
-.menu{
+#menu{
     position: absolute;
     right: 20px;
     top: 20px;
@@ -15,4 +15,17 @@
             color: $title_colour;
         }
     }
+}
+#mobileMenu{
+    display: none;
+    background-image: url('/menu.png');
+    background-position: 50%;
+    background-repeat: no-repeat;
+    background-size: 30px;
+    height: 30px;
+    width: 30px;
+    position: absolute;
+    right: 20px;
+    top: calc(50% - 15px );
+    cursor: pointer;
 }
