--- a/src/style/Content.scss
+++ b/src/style/Content.scss
@@ -50,8 +50,8 @@
                 margin: 10px;
                 padding: 20px;
                 background-repeat: no-repeat;
-                background-size: 50%;
-                background-position: 50%;
+                background-size: 40%;
+                background-position: 50% 40%;
                 cursor: pointer;
                 transition: all 0.1s ease-in-out;
                 h2{
